# bmcpp

./: .gitignore  CMakeLists.txt  Makefile  main.cc
include/: algorithm  array  chrono  cstddef  cstdint  tuple  type_traits  utility  ws2812b.h
include/avr/: mega328.h  register.h  scoped_interrupt.h  util.h
include/hal/: adc.h  i2c.h  port.h  rtc.h
include/meta/: meta.h
include/ws_segments/: display.h  font.h  pixel.h  segment.h  ws2812b.h
src/: main.cc
